[tool.poetry]
name = "hashtagstats-bot"
version = "0.2.0"
description = "Telegram bot to collect statistics based on #hashtags in our music chat"
authors = ["GooRoo <sergey.olendarenko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.4"
SQLAlchemy = "^1.3.13"
Telethon = "^1.11.0"
Delorean = "^1.0.0"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
